--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -14,10 +14,14 @@
   "skip": "Skip",
   "start": "Start",
   "popularServices": "Popular Services",
+  "invalid_credentials": "Invalid Email or password",
   "hangOnAnAdminWillApproveYourAccountShortly": "Hang on !\n An admin will approve your account shortly.",
   "links": "Links",
   "endingSoon": "Ending Soon",
   "pictures": "Pictures",
+  "buyer": "Buyer",
+  "seller": "Seller",
+  "both": "Both",
   "waitingForPicturesToUpload": "Waiting for pictures to upload",
 
   "totalBids": "Total Bids",
