--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,22 +5,15 @@
   "es": "Spanish",
   "error": "Error",
   "whoAmI": "Who Am I",
-  "introTitle1": "Property maintenance and repair biding system",
-  "introTitle2": "A tech solution that will elevate your home repair experience",
-  "introTitle3": "Hassle-Free home repair and maintenance solution",
-  "introDesc1": "looking for a contractor made easy, few simple steps and you will start receiving contractor repair offers",
-  "introDesc2": "Home Master App got you covered, see ads from contractor in your area",
-  "introDesc3": "With Home Master Plan App, choosing a contractor is in the palm of your hand !",
-  "skip": "Skip",
-  "start": "Start",
+
   "popularServices": "Popular Services",
   "hangOnAnAdminWillApproveYourAccountShortly": "Hang on !\n An admin will approve your account shortly.",
   "links": "Links",
   "endingSoon": "Ending Soon",
+  "successfully": "Successfully",
   "pictures": "Pictures",
   "waitingForPicturesToUpload": "Waiting for pictures to upload",
 
-  "totalBids": "Total Bids",
   "pleaseLoginFirst": "Please login first",
   "activeRequests": "Active Requests",
   "totalEarnings": "Total Earnings",
@@ -32,22 +25,18 @@
   "noSort": "No Sort",
   "propertyOwner": "Property Owner",
   "to": "TO",
-  "selectedZipCodes": "Selected Zip codes",
   "pleaseEnterValidURL": "Please enter a valid URL",
 
   "whatsapp": "Whatsapp",
   "thereAreNoPackages": "There are no packages",
 
-  "approvalRateThisMonth": "Approval rate this month",
   "earningsThisMonth": "Earnings this month",
-  "bidsThisMonth": "Bids this month",
 
   "facebook": "Facebook",
   "statistics": "Statistics",
   "website": "Website",
   "twitter": "X",
   "instagram": "Instagram",
-  "zipCodes": "Zip Codes",
   "package": "Package",
   "month": "Month",
   "youAreSubscribedToThe": "You are subscribed to the",
@@ -61,7 +50,6 @@
   "choosePackage": "Choose Package",
   "pleaseChoosePackageToEnjoyTheBenefitsOfTheApplication": "Please Choose Package to enjoy the benefits of the application",
   "main": "Main",
-  "or": "OR",
   "favouriteSocialMedia": "Favourite Social Media",
   "helloThere": "Hello there...!",
   "appLanguage": "Language",
@@ -90,8 +78,6 @@
   "msgInvalidAboutShort": "About must be at least 10 characters long",
   "login": "Login",
   "register": "Register",
-  "continueAsGuest": "Continue as a Guest",
-  "contractor": "Contractor",
   "types": "Types",
   "gallery": "Gallery",
   "rememberMe": "Remember me",
@@ -99,14 +85,12 @@
   "camera": "Camera",
   "selectedServices": "Selected Services",
   "selectServiceType": "Select Service Type",
-  "user": "User",
   "country": "Country",
   "capital": "Capital",
   "name": "Name",
   "userName": "Name",
   "countries": "Countries",
   "password": "Password",
-  "noRatingYet": "No Rating Yet",
   "selectHint": "-- select --",
   "cities": "Cities",
   "cancel": "Cancel",
@@ -114,16 +98,10 @@
   "currency": "SAR",
   "salary": "Salary",
   "chooseTheLanguage": "Choose The Language",
-  "no": "No",
-  "yes": "Yes",
   "wantToSignOut": "Do you want to Logout ?",
-  "wantToDeleteAccount": "Are you your sure you want to delete this account ?",
   "signUp": "Sign Up",
   "yourPhoneNumber": "Your Phone Number",
-  "forget": "Forget",
   "forgetPassword": "Forget Password ?",
-  "forgetPasswordTitle": "Forget your password ..!",
-  "forgetPasswordMassage": "Please enter the registered email with us to receive the verification code.",
   "otpTitle": "Enter Verification Code",
   "otpMassage": "Please enter the code sent to your Cell Phone",
   "resetPasswordTitle": "Enter New Password",
@@ -133,7 +111,6 @@
   "confirmPassword": "Confirm Password",
   "welcome": "Welcome",
   "createAnAccount": "Create An Account",
-  "addRequest": "Add Request",
   "email": "Email",
   "link": "Link",
   "mobile": "Cell Phone",
@@ -141,15 +118,10 @@
   "userDesc": "If you are a property owner",
   "contractorDesc": "If you are a service provider",
   "submit": "Submit",
-  "myBid": "My Bid",
   "state": "State",
-  "areYouSureDoYouWantToExit": "Are you sure do you want to exit ?",
-  "bidId": "Bid ID",
   "states": "States",
   "edit": "Edit",
   "questionCreateAccount": "You Don't Have Account ?",
-  "questionLoginAccount": "Already Have Account ?",
-  "createAccount": "Create Account",
   "firstName": "First Name",
   "lastName": "Last Name",
   "requests": "Requests",
@@ -157,8 +129,7 @@
   "reviews": "Reviews",
   "offers": "Offers",
   "exit": "Exit",
-  "rateContactor": "Rate contactor",
-  "ratePropertyOwner": "Rate Property Owner",
+
 
   "newPassword": "New Password",
   "theRequestHasBeenSentSuccessfully": "The request has been sent successfully",
@@ -166,11 +137,9 @@
   "theMalfunctionDesc": "the malfunction description",
   "voiceRecording": "voice recording",
   "malfunctionData": "malfunction data",
-  "writeHere": "Write here",
   "active": "current",
   "history": "previous",
   "details": "Details",
-  "rate": "Rate",
   "add": "Add",
   "fullName": "Full Name",
   "location": "Location",
@@ -181,16 +150,10 @@
   "message": "Massage",
   "send": "Send",
   "socialLinks": "Social Links",
-  "mainProfile": "Main Profile",
   "selectTheVehicleType": "Select the vehicle type",
   "showServiceProviders": "Show service providers",
   "addNewAddress": "Add a new address",
-  "thereAreNoNotifications": "There are no notifications",
   "selectLocation": "Select Location",
-  "propertyCreatedSuccessfully": "Property Created Successfully",
-  "propertyUpdatedSuccessfully": "Property Updated Successfully",
-  "bidCreatedSuccessfully": "Bid Created Successfully",
-  "bidUpdatedSuccessfully": "Bid Updated Successfully",
   "myLocation": "My Location",
   "pleaseSelectYourVehicleTypes": "Please select your vehicle types",
   "pleaseLocateTheService": "Please locate the service",
@@ -206,14 +169,11 @@
   "expectedArrivalTime": "Expected arrival time:",
   "servicesList": "Services list",
   "next": "Next",
-  "property": "Property",
-  "sendRequest": "Send Request",
   "confirmPasswordDoesNotMatchPassword": "Confirm password does not match password",
   "notificationRequestMassage": "This Request will end automatically after 14 days from the start date of the Request",
   "car": "Car",
   "about": "About",
   "enterTheNumberOfTheVehicle": "Enter the number of the vehicle",
-  "address": "Address",
   "street": "street",
   "extraDirections": "extra directions",
   "buildingNumber": "House/apartment/office number",
@@ -230,12 +190,10 @@
   "provider_cancel": "Canceled",
   "tittleLogin": "Hey, you ..!",
   "bodyLogin": "Login and keep your vehicle clean now..!",
-  "resendTheCode": "Resend the code",
   "buttonOtp": "Confirmation",
   "buttonRegister": "Register",
   "personal picture": "personal picture",
   "homeCity": "Abu Dhabi",
-  "zipCodeMustBe5NumberLong": "Zip code must be 5 numbers long",
   "buttonCurrent": "Current",
   "buttonPrevious": "previous",
   "caredText": "Seven Stars Car Wash and\n Cleaning Services",
@@ -261,8 +219,6 @@
   "orderDetails": "Order details",
   "confirmAndSend": "Confirm and send",
   "companyNameHint": "your company name",
-  "emailHint": "Email Address",
-  "mobileHint": "0XXXXXXXXXX",
   "passwordHint": "Password",
   "passwordNotSame": "Confirm password does not match password",
   "companyName": "Company Name",
@@ -275,11 +231,9 @@
   "female": "Female",
   "latestOffers": "Latest Offers",
   "quickRequest": "Quick Request",
-  "activeBidsThatYouCanContinueWith": "active Bids that you can continue with",
   "myRequests": "My Requests",
   "current": "Current",
   "closed": "Closed",
-  "bids": "Bids",
   "update": "Update",
   "newRequest": "New",
   "accepted": "Accepted",
@@ -289,27 +243,18 @@
   "ended": "Ended",
   "cancelled": "Cancelled",
   "daysLeft": "Days left",
-  "addProperty": "Add Property",
-  "updateProperty": "Update Property",
   "toFacilitateTheProcessOfRequestingMaintenanceServices": "to facilitate the process of requesting maintenance services",
   "msgInvalidCity": "City is required",
   "msgInvalidState": "State is required",
   "msgInvalidAddress": "Address is required",
-  "msgInvalidPropertyName": "Property name is required",
-  "propertyName": "Property Name",
-  "zipCode": "Zip Code",
-  "msgInvalidZipCode": "Zip code is required",
 
 
   "contactInformation": "Contact Information",
   "noOffersYet": "No Offers Yet",
-  "bidDetails": "Bid Details",
-  "bid": "Bid",
   "proposedWork": "Proposed Work",
   "warranty": "Warranty",
   "attachment": "Attachment",
   "noSavedOffers": "No Saved Offers",
-  "addYourProperty": "Add your property",
   "account": "Account",
   "editAccount": "Edit Account",
   "myProperties": "My Properties",
@@ -325,37 +270,14 @@
   "requestId": "Request ID",
   "startDate": "Start Date",
   "selectedService": "Selected Service",
-  "picturesForProperty": "Pictures for Property",
   "document": "Document",
-  "cost": "Cost",
-  "noBidsYet": "No Bids yet",
   "comment": "Comment",
-  "priceDesc": "Price ( High To Low )",
-  "priceAsc": "Price ( Low To High )",
-  "dateDesc": "Date ( Newest To Oldest )",
-  "dateAsc": "Date ( Oldest To Newest )",
-  "deleteProperty": "Delete Property",
+
   "delete": "Delete",
   "extend": "Extend",
   "extendRequest": "Extend Request",
-  "deleteMassage": "you won’t be able to undo this , be sure you wont to delete it",
   "youWillBeExtendingYourRequestFor": "You will be extending your request for",
   "daysAreYouSureYouWantToContinue": "days, are you sure you want to continue?",
-  "relist": "Relist",
-  "decline": "Decline",
-  "pleaseWaitForNewRequestsToComeIn": "Please wait for new requests to come in",
-  "addBid": "Add Bid",
-  "updateBid": "Update Bid",
-  "hide": "Hide",
-  "price": "Price",
-  "priceHint": "ex: 1,000",
-  "days": "Days",
-  "hours": "Hours",
-  "minutes": "Minutes",
-  "changePassword": "Change Password",
-  "seconds": "Seconds",
-  "signInWithFacebook": "Sign in with Facebook",
-  "signInWithApple": "Sign in with Apple",
-  "signInWithGoogle": "Sign in with Google"
+  "pleaseWaitForNewRequestsToComeIn": "Please wait for new requests to come in"
 
 }
